need to manage state. not sure if looking at accesstoken is best way. but response doesn't give status when success

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <title>React App</title>
   </head>
   <body>
-    <script>
+    <script id="fb-script">
       window.fbAsyncInit = function() {
         FB.init({
           appId      : '252743665168569',
@@ -34,7 +34,6 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
-    <div id="fb-root"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
